[tool.poetry]
name = "evo-vlm"
version = "0.1.0"
description = ""
authors = ["Tatsuya Miyazaki <miyazaki.tatsuya.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
packaging = "^24.1"
setuptools = "<70.0.0"
wheel = "^0.43.0"
transformers = "^4.42.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Same as Black.
line-length = 88

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["ALL"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
